<resources>
    <string name="AUTO">Auto</string>
    <string name="Abb_AUTO">Auto</string>
    <string name="Abb_Title_Resolution">Resolution</string>
    <string name="Abb_Title_badge_labs">LABS</string>
    <string name="COLOR_TUNE_CUSTOM">Manual</string>
    <string name="F_AUTOFOCUS">Auto focus</string>
    <string name="F_AUTO_FLASH">Auto</string>
    <string name="F_MANUALFOCUS">Manual focus</string>
    <string name="ISO_100">100</string>
    <string name="ISO_125">125</string>
    <string name="ISO_160">160</string>
    <string name="ISO_1600">1600</string>
    <string name="ISO_200">200</string>
    <string name="ISO_250">250</string>
    <string name="ISO_320">320</string>
    <string name="ISO_3200">3200</string>
    <string name="ISO_400">400</string>
    <string name="ISO_50">50</string>
    <string name="ISO_500">500</string>
    <string name="ISO_64">64</string>
    <string name="ISO_640">640</string>
    <string name="ISO_80">80</string>
    <string name="ISO_800">800</string>
    <string name="KELVIN_VALUE_10000K">10000K</string>
    <string name="KELVIN_VALUE_2300K">2300K</string>
    <string name="KELVIN_VALUE_2400K">2400K</string>
    <string name="KELVIN_VALUE_2500K">2500K</string>
    <string name="KELVIN_VALUE_2600K">2600K</string>
    <string name="KELVIN_VALUE_2700K">2700K</string>
    <string name="KELVIN_VALUE_2800K">2800K</string>
    <string name="KELVIN_VALUE_2900K">2900K</string>
    <string name="KELVIN_VALUE_3000K">3000K</string>
    <string name="KELVIN_VALUE_3100K">3100K</string>
    <string name="KELVIN_VALUE_3200K">3200K</string>
    <string name="KELVIN_VALUE_3300K">3300K</string>
    <string name="KELVIN_VALUE_3400K">3400K</string>
    <string name="KELVIN_VALUE_3500K">3500K</string>
    <string name="KELVIN_VALUE_3600K">3600K</string>
    <string name="KELVIN_VALUE_3700K">3700K</string>
    <string name="KELVIN_VALUE_3800K">3800K</string>
    <string name="KELVIN_VALUE_3900K">3900K</string>
    <string name="KELVIN_VALUE_4000K">4000K</string>
    <string name="KELVIN_VALUE_4100K">4100K</string>
    <string name="KELVIN_VALUE_4200K">4200K</string>
    <string name="KELVIN_VALUE_4300K">4300K</string>
    <string name="KELVIN_VALUE_4400K">4400K</string>
    <string name="KELVIN_VALUE_4500K">4500K</string>
    <string name="KELVIN_VALUE_4600K">4600K</string>
    <string name="KELVIN_VALUE_4700K">4700K</string>
    <string name="KELVIN_VALUE_4800K">4800K</string>
    <string name="KELVIN_VALUE_4900K">4900K</string>
    <string name="KELVIN_VALUE_5000K">5000K</string>
    <string name="KELVIN_VALUE_5100K">5100K</string>
    <string name="KELVIN_VALUE_5200K">5200K</string>
    <string name="KELVIN_VALUE_5300K">5300K</string>
    <string name="KELVIN_VALUE_5400K">5400K</string>
    <string name="KELVIN_VALUE_5500K">5500K</string>
    <string name="KELVIN_VALUE_5600K">5600K</string>
    <string name="KELVIN_VALUE_5700K">5700K</string>
    <string name="KELVIN_VALUE_5800K">5800K</string>
    <string name="KELVIN_VALUE_5900K">5900K</string>
    <string name="KELVIN_VALUE_6000K">6000K</string>
    <string name="KELVIN_VALUE_6100K">6100K</string>
    <string name="KELVIN_VALUE_6200K">6200K</string>
    <string name="KELVIN_VALUE_6300K">6300K</string>
    <string name="KELVIN_VALUE_6400K">6400K</string>
    <string name="KELVIN_VALUE_6500K">6500K</string>
    <string name="KELVIN_VALUE_6600K">6600K</string>
    <string name="KELVIN_VALUE_6700K">6700K</string>
    <string name="KELVIN_VALUE_6800K">6800K</string>
    <string name="KELVIN_VALUE_6900K">6900K</string>
    <string name="KELVIN_VALUE_7000K">7000K</string>
    <string name="KELVIN_VALUE_7100K">7100K</string>
    <string name="KELVIN_VALUE_7200K">7200K</string>
    <string name="KELVIN_VALUE_7300K">7300K</string>
    <string name="KELVIN_VALUE_7400K">7400K</string>
    <string name="KELVIN_VALUE_7500K">7500K</string>
    <string name="KELVIN_VALUE_7600K">7600K</string>
    <string name="KELVIN_VALUE_7700K">7700K</string>
    <string name="KELVIN_VALUE_7800K">7800K</string>
    <string name="KELVIN_VALUE_7900K">7900K</string>
    <string name="KELVIN_VALUE_8000K">8000K</string>
    <string name="KELVIN_VALUE_8100K">8100K</string>
    <string name="KELVIN_VALUE_8200K">8200K</string>
    <string name="KELVIN_VALUE_8300K">8300K</string>
    <string name="KELVIN_VALUE_8400K">8400K</string>
    <string name="KELVIN_VALUE_8500K">8500K</string>
    <string name="KELVIN_VALUE_8600K">8600K</string>
    <string name="KELVIN_VALUE_8700K">8700K</string>
    <string name="KELVIN_VALUE_8800K">8800K</string>
    <string name="KELVIN_VALUE_8900K">8900K</string>
    <string name="KELVIN_VALUE_9000K">9000K</string>
    <string name="KELVIN_VALUE_9100K">9100K</string>
    <string name="KELVIN_VALUE_9200K">9200K</string>
    <string name="KELVIN_VALUE_9300K">9300K</string>
    <string name="KELVIN_VALUE_9400K">9400K</string>
    <string name="KELVIN_VALUE_9500K">9500K</string>
    <string name="KELVIN_VALUE_9600K">9600K</string>
    <string name="KELVIN_VALUE_9700K">9700K</string>
    <string name="KELVIN_VALUE_9800K">9800K</string>
    <string name="KELVIN_VALUE_9900K">9900K</string>
    <string name="MF_0_0">0.0</string>
    <string name="MF_0_1">0.1</string>
    <string name="MF_0_2">0.2</string>
    <string name="MF_0_3">0.3</string>
    <string name="MF_0_4">0.4</string>
    <string name="MF_0_5">0.5</string>
    <string name="MF_0_6">0.6</string>
    <string name="MF_0_7">0.7</string>
    <string name="MF_0_8">0.8</string>
    <string name="MF_0_9">0.9</string>
    <string name="MF_1_0">1.0</string>
    <string name="Title_About_Camera">About Camera</string>
    <string name="Title_Advanced_Recording_Options">Advanced video options</string>
    <string name="Title_AutoHDR">Auto HDR</string>
    <string name="Title_Contact_us">Contact us</string>
    <string name="Title_Customization_Service">Customization Service</string>
    <string name="Title_Guideline">Grid lines</string>
    <string name="Title_LocationTag">Location tags</string>
    <string name="Title_Permissions">Permissions</string>
    <string name="Title_PicturesAsPreviewed">Save selfies as previewed</string>
    <string name="Title_Privacy_Notice">Privacy notice</string>
    <string name="Title_QRCode">Scan QR codes</string>
    <string name="Title_QuickShot">Quick launch</string>
    <string name="Title_Raw_File">RAW copies</string>
    <string name="Title_SaveOptions">Advanced picture options</string>
    <string name="Title_SceneOptimizer">Scene optimizer</string>
    <string name="Title_Selfie_Tone">Tone</string>
    <string name="Title_SettingsToKeep">Settings to keep</string>
    <string name="Title_ShootingMethod">Shooting Methods</string>
    <string name="Title_ShutterSound">Shutter sound</string>
    <string name="Title_Storage">Storage location</string>
    <string name="Title_SwipeShutterTo">Swipe Shutter button to</string>
    <string name="Title_TouchVibrations">Vibration feedback</string>
    <string name="Title_TrackingAF">Tracking auto-focus</string>
    <string name="Title_VideoStabilisation">Video stabilisation</string>
    <string name="Title_Video_Auto_FPS">Auto FPS</string>
    <string name="Title_Viewmode">Full screen view (16:9)</string>
    <string name="Title_Watermark">Watermark</string>
    <string name="Title_camera_assistant">Camera Assistant</string>
    <string name="Title_composition_guide">Shot suggestions</string>
    <string name="Title_how_to_use">How to use</string>
    <string name="Title_intelligence">Intelligent features</string>
    <string name="Title_pictures">Pictures</string>
    <string name="Title_privacy">Privacy</string>
    <string name="Title_selfies">Selfies</string>
    <string name="Title_useful_features">General</string>
    <string name="Title_videos">Videos</string>
    <string name="composition_guide_summary">Get on-screen guides to help you line up great shots.</string>
    <string name="customization_service_summary">Get personalized content based on how you use your phone.</string>
    <string name="dep_camera_assistant">dep_camera_assistant</string>
    <string name="dep_empty">dep_empty</string>
    <string name="dep_etc">dep_etc</string>
    <string name="dep_intelligence">dep_intelligence</string>
    <string name="dep_pictures">dep_pictures</string>
    <string name="dep_privacy">dep_privacy</string>
    <string name="dep_selfie">dep_selfie_features</string>
    <string name="dep_useful_features">dep_useful_features</string>
    <string name="dep_videos">dep_videos</string>
    <string name="hdr_apply_setting_description">Make your pictures pop by capturing more detail in the bright and dark areas of your shots.</string>
    <string name="intelligent_feature_description">Intelligent features only work with the rear camera in Photo mode.</string>
    <string name="key_about_camera">about_camera</string>
    <string name="key_advanced_recording_options">advanced_recording_options</string>
    <string name="key_camera_assistant">camera_assistant</string>
    <string name="key_composition_guide">composition_guide</string>
    <string name="key_contact_us">contact_us</string>
    <string name="key_customization_service">customization_service</string>
    <string name="key_guide_line">guide_line</string>
    <string name="key_hdr_enabled">hdr_enabled</string>
    <string name="key_hold_camera_button_to">hold_camera_button_to</string>
    <string name="key_how_to_use">how_to_use</string>
    <string name="key_intelligent_features_summary">intelligent_features_summary</string>
    <string name="key_location_tag">location_tag</string>
    <string name="key_permissions">permissions</string>
    <string name="key_picture_format">picture_format</string>
    <string name="key_privacy_notice">privacy_notice</string>
    <string name="key_qr_code_detection">qr_code_detection</string>
    <string name="key_quick_launch">quick_launch</string>
    <string name="key_reset_settings">reset_settings</string>
    <string name="key_save_as_flipped">save_as_flipped</string>
    <string name="key_save_options">save_options</string>
    <string name="key_scene_optimizer">scene_optimizer</string>
    <string name="key_selfie_tone">selfie_tone_mode</string>
    <string name="key_selfie_tone_v2">selfie_tone_v2_mode</string>
    <string name="key_settings_to_keep">settings_to_keep</string>
    <string name="key_shooting_method">shooting_method</string>
    <string name="key_shutter_sound">shutter_sound</string>
    <string name="key_storage">storage</string>
    <string name="key_touch_vibrations">touch_vibrations</string>
    <string name="key_tracking_af">tracking_af</string>
    <string name="key_video_auto_fps">video_auto_fps</string>
    <string name="key_video_stabilisation">video_stabilisation</string>
    <string name="key_view_mode">view_mode</string>
    <string name="key_watermark">watermark</string>
    <string name="location_tag_summary">Add tags to your pictures and videos so you can see where they were taken.</string>
    <string name="picture_format_summary">"Save both JPEG and RAW copies of pictures taken in Pro mode. Color tone adjustments won't be shown in RAW copies."</string>
    <string name="pictures_as_previewed_summary">Save selfies and selfie videos as they appear in the preview without flipping them.</string>
    <string name="reset_title">Reset settings</string>
    <string name="scene_optimizer_summary">Automatically optimize your shots for the scene.</string>
    <string name="settings">Camera settings</string>
    <string name="top_level_key">top_level_key</string>
    <string name="tracking_af_summary">Keep the rear camera focused on the selected subject even if they move.</string>
    <string name="video_auto_fps_summary">Record brighter videos in low-light conditions by automatically optimizing the frame rate in Video mode.</string>
    <string name="viewmode_tag_summary">Preview pictures and videos using the full screen.</string>
</resources>